--- a/static/signin.css
+++ b/static/signin.css
@@ -164,3 +164,11 @@ h1 {
     box-shadow: 0 -1px 0 rgba(0, 0, 0, .04), 0 1px 1px rgba(0, 0, 0, .25);
     cursor: not-allowed;
 }
+
+
+
+.flash-messages{
+    color: red; 
+    text-align: center;
+    margin: 10px 0;
+}
