Added Icons & Names for Tabs

--- a/templates/signin.html
+++ b/templates/signin.html
@@ -3,7 +3,8 @@
 
 <head>
     <link rel="stylesheet" href="{{ url_for('static', filename='signin.css') }}">
-    <title>Log In</title>
+    <title>Login - Coffeehouse </title>
+    <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sen:wght@400..800&display=swap" rel="stylesheet">
