--- a/templates/schedule.html
+++ b/templates/schedule.html
@@ -17,22 +17,18 @@
         <section class="schedule-section">
             <div class="schedule-header">
                 <h2>My Schedule</h2>
+                <div></div>
             </div>
 
             <div class="toolbar">
                 <div class="tags">
                     <a class="button" href="unavailability">Availability</a>
-                    <button>Today</button>
+                    <button class="button">Today</button>
                 </div>
                 <div class="options">
-                    <button class="dropdown_btn">Filters</button>
-                    <div class="dropdown_content">
-                        <a href="option1">option1</a>
-                        <a href="option2">option2</a>
-                        <a href="option3">option3</a>
-                    </div>
-                    <button class="dropdown_btn">Tools</button>
-                    <button>Request Change</button>
+                    <button class="button">Filters</button>
+                    <button class="button">Tools</button>
+                    <button class="button">Request Change</button>
                 </div>
             </div>
 
