--- a/static/availability.css
+++ b/static/availability.css
@@ -41,6 +41,10 @@ main {
     text-decoration: none;
 }
 
+button:hover {
+    background-color: #0056b3;
+}
+
 .add-btn {
     background-color: #000;
     color: white;
@@ -86,18 +90,14 @@ main {
 .availability-grid {
     display: grid;
     grid-template-columns: 100px repeat(11, 1fr);
-    gap: 1px;
-    background-color: #222;
+    background-color: white;
 }
 
-.time-labels {
-    grid-column: 1 / -1; 
-    grid-row: 1;
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    background-color: #eee;
+.time-label {
     text-align: center;
-    padding: 10px 0;
+    padding: 10px;
+    background-color: #f4f4f4;
+    border: 1px solid #ddd;
 }
 
 .time-labels span {
@@ -110,23 +110,32 @@ main {
     display: flex;
     align-items: center;
     justify-content: center;
-    color: #ddd;
+    background-color: #ddd;
     font-weight: bold;
-    background-color: #333;
-    padding: 15px;
+    color: #444;
+    padding: 10px;
     text-align: center;
 }
 
 .cell {
-    background-color: black;
-    border: 1px solid white;
+    background-color: white;
     height: 90px;
+    border: 0.5px solid black;
     text-align: center;
+}
+
+.empty-cell {
+    background-color: #eee;
+}
+
+.cell:hover {
+    background-color: #3d3d3d;
+    cursor: pointer;
 }
 
 
 .modal {
-    display: none; /*default hidden*/
+    display: none;
     position: fixed;
     z-index: 1;
     left: 0;
