--- a/templates/schedule.html
+++ b/templates/schedule.html
@@ -22,7 +22,8 @@
 
             <div class="toolbar">
                 <div class="tags">
-                    <a class="button" href="unavailability">Availability</a>
+                    <a class="button" href="{{ url_for('main.unavailability_page') }}">Availability</a>
+
                     <button class="button">Today</button>
                 </div>
                 <div class="options">
