--- a/templates/unavailability.html
+++ b/templates/unavailability.html
@@ -12,50 +12,90 @@
         rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <script src="{{ url_for('static', filename='availability.js') }}"></script>
 </head>
 
 <body>
     <!-- Header -->
     <div class="container">
-        <header class="d-flex align-items-center justify-content-between py-2 mb-2 border-bottom">
+        <header class="d-flex align-items-center justify-content-between py-2 mb-3 border-bottom">
             <div class="d-flex align-items-center col-md-6">
                 <a href="/" class="d-flex align-items-center text-dark text-decoration-none me-3">
                     <img src="{{ url_for('static', filename='SmallLogo.png') }}" alt="Logo" width="50" height="50">
                 </a>
                 <!-- Navigation Buttons -->
                 <ul class="nav">
-                    <li><a href="{{ url_for('main.unavailability_page') }}"
-                            class="nav-link px-2 text-dark">Availability</a></li>
-                    <li><a href="{{ url_for('main.schedule') }}" class="nav-link px-2 text-secondary">Schedule</a></li>
+                    <li>
+                        <a href="{{ url_for('main.unavailability_page') }}" class="nav-link px-2 text-dark">
+                            <i class="bi bi-check2-circle"></i>
+                            Availability
+                            <i class="bi bi-dot dot-icon"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="{{ url_for('main.schedule') }}" class="nav-link px-2 text-secondary">
+                            <i class="bi bi-calendar-range me-1"></i>
+                            Schedule
+                        </a>
+                    </li>
                 </ul>
             </div>
             <!-- Welcome w/ Name -->
             <div class="text-center">
-                <p class="mb-0">Welcome, {{ name }}</p>
+                
+                <p class="mb-0"><i class="bi bi-bell-fill"></i>
+                    Welcome, {{ name }}</p>
             </div>
     </div>
 
     <div class="container">
-        <div class="row" style="min-height: 100vh;">
+        <div class="row">
             <aside class="col-md-2 d-flex flex-column">
-                <div class="p-3 bg-light border rounded flex-grow-1">
-                    <h4>Menu</h4>
+                <div class="p-3 bg-light border rounded mb-2">
+                    <h4>
+                        <i class="bi bi-list"></i>
+                        Menu
+                    </h4>
+                    <hr>
                     <ul class="nav nav-pills flex-column mb-auto">
-                        <li><a href="#" class="nav-link" onclick="openModal()">Add +</a></li>
-                        <li><a href="#" class="nav-link" onclick="clearAvailability()">Clear</a></li>
-                        <li><a href="#" class="nav-link">Notify Manager</a></li>
+                        <li>
+                            <a href="#" class="d-flex align-items-center p-2 mb-2 bg-brown text-white rounded small-font text-decoration-none" onclick="openModal()">
+                                <i class="bi bi-plus-circle me-2"></i>
+                                Add
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="d-flex align-items-center p-2 mb-2 bg-brown text-white rounded small-font text-decoration-none" onclick="clearAvailability()">
+                                <i class="bi bi-x-circle me-2"></i>
+                                Clear
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="d-flex align-items-center p-2 mb-2 bg-brown text-white rounded small-font text-decoration-none">
+                                <i class="bi bi-bell me-2"></i>
+                                Notify Manager
+                            </a>
+                        </li>
                     </ul>
                 </div>
+                    <div class="p-3 bg-light border rounded">
+                        <h4><i class="bi bi-card-checklist me-1"></i>
+                            Selections
+                        </h4>
+                        <hr>
+                        <div id="availabilityList" class="availability-list"> </div>
+                    </div>
             </aside>
 
             <!-- Main Content -->
             <main class="col-md-10">
                 <div class="p-3 bg-light border rounded">
-                    <div class="schedule-header">
-                        <h4>My Availability</h4>
-                    </div>
-
+                    <h4 class="text-center">
+                        <i class="bi bi-check2-circle"></i>
+                        My Availability
+                    </h4>
+                    <hr>
                     <div class="schedule-grid">
                         <div class="empty-cell"></div>
                         {% for hour in range(7, 18) %}
@@ -97,7 +137,6 @@
                                 <button onclick="addAvailability()">Add Availability</button>
                             </div>
                         </div>
-                        <div id="availabilityList" class="availability-list"></div>
                     </div>
                 </div>
             </main>
