--- a/templates/unavailability.html
+++ b/templates/unavailability.html
@@ -39,13 +39,22 @@
                             Schedule
                         </a>
                     </li>
+                    <li>
+                        <a href="{{ url_for('main.schedule') }}" class="nav-link px-2 text-secondary">
+                            <i class="bi bi-gift me-1"></i>
+                            Events
+                        </a>
+                    </li>
                 </ul>
             </div>
             <!-- Welcome w/ Name -->
             <div class="text-center">
 
-                <p class="mb-0"><i class="bi bi-bell-fill"></i>
-                    Welcome, {{ name }}</p>
+                <p class="mb-0">
+                    <i class="bi bi-bell-fill me-5"></i>
+                    Welcome, {{ name }}
+                    <i class="bi bi-person-fill"></i>
+                </p>
             </div>
     </div>
 
