--- a/templates/unavailability.html
+++ b/templates/unavailability.html
@@ -169,6 +169,19 @@
             </main>
         </div>
     </div>
+    <div class="container">
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-2 mt-5 border-top">
+        <p class="col-md-4 mb-0 text-body-secondary">© 2024 Mary Low Coffeehouse</p>
+    
+        <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+            <img src="{{ url_for('static', filename='SmallLogo.png') }}" alt="Logo" width="50" height="50">
+        </a>
+    
+        <ul class="nav col-md-4 justify-content-end">
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-dark">About Us</a></li>
+        </ul>
+    </footer>
+</div>
 </body>
 
 </html>
