--- a/templates/schedule.html
+++ b/templates/schedule.html
@@ -12,26 +12,48 @@
         rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
 <body>
     <!-- Header -->
     <div class="container">
-        <header class="d-flex align-items-center justify-content-between py-2 mb-2 border-bottom">
+        <header class="d-flex align-items-center justify-content-between py-2 mb-3 border-bottom">
             <div class="d-flex align-items-center col-md-6">
                 <a href="/" class="d-flex align-items-center text-dark text-decoration-none me-3">
                     <img src="{{ url_for('static', filename='SmallLogo.png') }}" alt="Logo" width="50" height="50">
                 </a>
                 <!-- Navigation Buttons -->
                 <ul class="nav">
-                    <li><a href="{{ url_for('main.unavailability_page') }}"
-                            class="nav-link px-2 text-secondary">Availability</a></li>
-                    <li><a href="#" class="nav-link px-2 text-dark">Schedule</a></li>
+                    <li>
+                        <a href="{{ url_for('main.unavailability_page') }}" class="nav-link px-2 text-secondary">
+                            <i class="bi bi-check2-circle"></i>
+                            Availability
+                        </a>
+                    </li>
+                    <li>
+                        <a href="{{ url_for('main.schedule') }}" class="nav-link px-2 text-dark">
+                            <i class="bi bi-calendar-range me-1"></i>
+                            Schedule
+                            <i class="bi bi-dot dot-icon"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="{{ url_for('main.schedule') }}" class="nav-link px-2 text-secondary">
+                            <i class="bi bi-gift me-1"></i>
+                            Events
+                        </a>
+                    </li>
                 </ul>
             </div>
             <!-- Welcome w/ Name -->
             <div class="text-center">
-                <p class="mb-0">Welcome, {{ name }}</p>
+
+                <p class="mb-0">
+                    <i class="bi bi-bell-fill me-5"></i>
+                    Welcome, {{ name }}
+                    <i class="bi bi-person-fill"></i>
+                </p>
             </div>
     </div>
 
@@ -40,27 +62,85 @@
     <div class="container">
         <div class="row" style="min-height: 100vh;">
             <aside class="col-md-2 d-flex flex-column">
-                <div class="p-3 bg-light border rounded flex-grow-1">
-                    <h4>Menu</h4>
+                <div class="p-3 bg-light border rounded mb-2">
+                    <h4>
+                        <i class="bi bi-list"></i>
+                        Menu
+                    </h4>
+                    <hr>
                     <ul class="nav nav-pills flex-column mb-auto">
-                        <li><a href="#" class="nav-link">Filters</a></li>
-                        <li><a href="#" class="nav-link">Tools</a></li>
-                        <li><a href="#" class="nav-link">Request Change</a></li>
+                        <li>
+                            <a href="#" class="d-flex align-items-center p-2 mb-2 bg-brown text-white rounded small-font text-decoration-none">
+                                <i class="bi bi-filter-circle me-2"></i>
+                                Filters
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="d-flex align-items-center p-2 mb-2 bg-brown text-white rounded small-font text-decoration-none">
+                                <i class="bi bi-wrench me-2"></i>
+                                Tools
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="d-flex align-items-center p-2 mb-2 bg-brown text-white rounded small-font text-decoration-none">
+                                <i class="bi bi-pencil-fill me-2"></i>
+                                Request Change
+                            </a>
+                        </li>
                     </ul>
                 </div>
+                <div class="p-3 bg-light border rounded">
+                    <h4>
+                        <i class="bi bi-graph-up-arrow me-1"></i>
+                        Summary
+                    </h4>
+                    <hr>
+                    <ul class="list-unstyled mb-0">
+                        <li class="d-flex justify-content-between align-items-center py-2">
+                            <span>
+                                <i class="bi bi-coin"></i>
+                                Wages:
+                            </span>
+                            <span class="fw-bold">$1234.56</span> <!-- Example double -->
+                        </li>
+                        <li class="d-flex justify-content-between align-items-center py-2">
+                            <span>
+                                <i class="bi bi-clock me-1"></i>
+                                Hours:
+                            </span>
+                            <span class="fw-bold">42.50</span> <!-- Example double -->
+                        </li>
+                    </ul>
+                </div>                
             </aside>
         
 
             <!-- Main Content -->
             <main class="col-md-10">
                 <div class="p-3 bg-light border rounded">
-                    <div class="schedule-header">
-                        <h4>My Schedule</h4>
-                    </div>
+                    <header class="d-flex align-items-center justify-content-between">
+                        <div class="d-flex align-items-center ms-2">
+                            <button type="button" id="prevWeek" class="btn p-0 me-2">
+                                <i class="bi bi-chevron-left"></i>
+                            </button>
+                            <input type="week" id="availabilityDate" name="availabilityDate" class="ms-2 me-2">
+                            <button type="button" id="nextWeek" class="btn p-0 ms-2">
+                                <i class="bi bi-chevron-right"></i>
+                            </button>
+                        </div>
+                        <h4 class="text-center m-0">
+                            <i class="bi bi-calendar-range me-2"></i>
+                            My Schedule
+                        </h4>
+                        <i class="bi bi-three-dots me-2">
+                        </i>
+                    </header>
+                    <hr>
                     <div class="schedule-grid">
                         <div class="empty-cell"></div>
                         {% for hour in range(7, 18) %}
-                        <div class="time-label">{{ hour }}{{ 'AM' if hour < 12 else 'PM' }}</div>
+                        <div class="time-label">{{ hour if hour < 13 else (hour%12) }}{{ 'AM' if hour < 12 else 'PM'
+                        }}</div>
                                 {% endfor %}
                                 {% for day in ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday",
                                 "Sunday"]
@@ -78,7 +158,19 @@
             </main>
         </div>
     </div>
+    <div class="container">
+        <footer class="d-flex flex-wrap justify-content-between align-items-center py-2 mt-5 border-top">
+            <p class="col-md-4 mb-0 text-body-secondary">© 2024 Mary Low Coffeehouse</p>
+        
+            <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+                <img src="{{ url_for('static', filename='SmallLogo.png') }}" alt="Logo" width="50" height="50">
+            </a>
+        
+            <ul class="nav col-md-4 justify-content-end">
+              <li class="nav-item"><a href="#" class="nav-link px-2 text-dark">About Us</a></li>
+            </ul>
+        </footer>
+    </div>
 </body>
 </body>
-
 </html>
