--- a/website/templates/schedule.html
+++ b/website/templates/schedule.html
@@ -7,8 +7,7 @@
     <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Sen:wght@400..800&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Sen:wght@400..800&display=swap"
         rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -132,8 +131,20 @@
                             <i class="bi bi-calendar-range me-2"></i>
                             My Schedule
                         </h4>
-                        <i class="bi bi-three-dots me-2">
-                        </i>
+                         <!-- Dropdown -->
+                        <div class="dropdown">
+                            <button class="btn p-0 border-0 bg-transparent" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+                              <i class="bi bi-three-dots"></i>
+                            </button>
+                            <ul class="dropdown-menu dropdown-menu-end shadow" aria-labelledby="dropdownMenuButton">
+                              <li>
+                                <a class="dropdown-item" href="#" onclick="printPage()">
+                                    <i class="bi bi-printer me-2"></i>
+                                    Print
+                                </a>
+                              </li>
+                            </ul>
+                        </div>  
                     </header>
                     <hr>
                     <div class="schedule-grid">
@@ -171,6 +182,7 @@
             </ul>
         </footer>
     </div>
-</body>
+    <script src="{{ url_for('static', filename='schedule.js') }}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
