--- a/website/templates/unavailability.html
+++ b/website/templates/unavailability.html
@@ -13,7 +13,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <script src="{{ url_for('static', filename='availability.js') }}"></script>
 </head>
 
 <body>
@@ -119,8 +118,20 @@
                             <i class="bi bi-check2-circle me-2"></i>
                             My Availability
                         </h4>
-                        <i class="bi bi-three-dots me-2">
-                        </i>
+                         <!-- Dropdown -->
+                         <div class="dropdown">
+                            <button class="btn p-0 border-0 bg-transparent" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+                              <i class="bi bi-three-dots"></i>
+                            </button>
+                            <ul class="dropdown-menu dropdown-menu-end shadow" aria-labelledby="dropdownMenuButton">
+                              <li>
+                                <a class="dropdown-item" href="#" onclick="printPage()">
+                                    <i class="bi bi-printer me-2"></i>
+                                    Print
+                                </a>
+                              </li>
+                            </ul>
+                        </div>  
                     </header>
                     <hr>
                     <div class="schedule-grid">
@@ -182,6 +193,7 @@
         </ul>
     </footer>
 </div>
+    <script src="{{ url_for('static', filename='availability.js') }}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
-
 </html>
